# word_surrounder

./: .gitignore  README.md
backend/: pyproject.toml
backend/src/: api.py  main.py  text_processor.py
backend/tests/: test_text_processor.py
frontend/: package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.js
frontend/src/components/file-upload/: file-upload.component.jsx  file-upload.styles.js
frontend/src/components/file_upload/: FileUpload.js  FileUpload.jsx
frontend/src/components/file_upload/__test__/: FileUpload.test.js
frontend/src/components/file_upload/__test__/__snapshots__/: FileUpload.test.js.snap
frontend/src/components/text_field/: TextField.js  TextField.jsx
frontend/src/components/text_field/__test__/: TextField.test.js
frontend/src/components/text_field/__test__/__snapshots__/: TextField.test.js.snap
